Updated description and license

--- a/resources/templates/mustache/package.mustache
+++ b/resources/templates/mustache/package.mustache
@@ -1,8 +1,8 @@
 {
   "name": "{{{projectName}}}",
   "version": "{{{projectVersion}}}",
-  "description": "{{{projectDescription}}}",
-  "license": "{{licenseName}}",
+  "description": "The Salesforce Marketing Cloud Node.js SDK",
+  "license": "BSD-3-Clause",
   "main": "{{sourceFolder}}{{#invokerPackage}}/{{invokerPackage}}{{/invokerPackage}}/index.js",
   "scripts": {
     "test": "node_modules/.bin/mocha test/unit --recursive && node_modules/.bin/mocha test/integration --recursive --timeout {TEST_TIMEOUT}s"
